--- a/pub.html
+++ b/pub.html
@@ -76,7 +76,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-						<strong>Understanding and Discovering Software Configuration Dependencies in Cloud and Datacenter Systems</strong> [<a href="cdep.pdf" target="_blank">pdf</a> | <a href="pub/cdep_bib.txt" target="_blank">bib</a> | <a href="https://github.com/xlab-uiuc/cdep-fse" target="_blank">code</a>]
+						<strong>Understanding and Discovering Software Configuration Dependencies in Cloud and Datacenter Systems</strong> [<a href="pub/cdep.pdf" target="_blank">pdf</a> | <a href="pub/cdep_bib.txt" target="_blank">bib</a> | <a href="https://github.com/xlab-uiuc/cdep-fse" target="_blank">code</a>]
 						<br>
             					Qingrong Chen, Teng Wang, Owolabi Legunsen, Shanshan Li, and Tianyin Xu,
 						<br>
@@ -269,7 +269,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
 		      <span style="font-size: 12pt;">
-						<strong>Towards Web-based Delta Synchronization for Cloud Storage Services</strong> [<a href="pub/fast18.pdf" target="_blank">pdf</a> | <a href="pub/fast18_bib.txt" target="_blank">bib</a>]
+						<strong>Towards Web-based Delta Synchronization for Cloud Storage Services</strong> [<a href="pub/webrsync.pdf" target="_blank">pdf</a> | <a href="pub/webrsync_bib.txt" target="_blank">bib</a>]
 						<br>
 						He Xiao, Zhenhua Li, Ennan Zhai, Tianyin Xu, Yang Li, Yonghe Wang, Quanlu Zhang, and Yao Liu
 						<br>
@@ -319,7 +319,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>DefDroid: Towards a More Defensive Mobile OS Against Disruptive App Behavior</strong> [<a href="pub/mobisys16.pdf" target="_blank">pdf</a> | <a href="pub/mobisys16_bib.txt" target="_blank">bib</a>]
+						<strong>DefDroid: Towards a More Defensive Mobile OS Against Disruptive App Behavior</strong> [<a href="pub/defdroid.pdf" target="_blank">pdf</a> | <a href="pub/defdroid_bib.txt" target="_blank">bib</a>]
 						<br>
 						Peng Huang, Tianyin Xu, Xinxin Jin, and Yuanyuan Zhou
 						<br>
