--- a/report.html
+++ b/report.html
@@ -172,7 +172,10 @@ div.Section1
                         <a href="https://issues.apache.org/jira/browse/HDFS-15128" target="_blank">HDFS-15128</a> - Unit test failing to clean testing data and crashed future Maven test run <br>
                         <a href="https://issues.apache.org/jira/browse/HDFS-15193" target="_blank">HDFS-15193</a> - Improving the error message for missing `dfs.namenode.rpc-address.$NAMESERVICE` <br>
                         <a href="https://issues.apache.org/jira/browse/HDFS-15250" target="_blank">HDFS-15250</a> - Setting `dfs.client.use.datanode.hostname` to true can crash the system because of unhandled UnresolvedAddressException <br>
-                        <br>
+			<a href="https://issues.apache.org/jira/browse/HDFS-15438" target="_blank">HDFS-15438</a> - Setting dfs.disk.balancer.max.disk.errors = 0 will fail the block copy <br>		
+                        <a href="https://issues.apache.org/jira/browse/HDFS-15439" target="_blank">HDFS-15439</a> - Setting dfs.mover.retry.max.attempts to negative value will retry forever <br>
+			<a href="https://issues.apache.org/jira/browse/HDFS-15443" target="_blank">HDFS-15443</a> - Setting dfs.datanode.max.transfer.threads to a very small value can cause strange failure <br>
+			<br>
 			<a href="https://issues.apache.org/jira/browse/YARN-2832" target="_blank">YARN-2832</a> - Wrong Check Logic of NodeHealthCheckerService Causes Latent Error<br>
                         <a href="https://issues.apache.org/jira/browse/YARN-4500" target="_blank">YARN-4500</a> - Missing default config values in yarn-default.xml<br>
                         <a href="https://issues.apache.org/jira/browse/YARN-5793" target="_blank">YARN-5793</a> - Trim configuration values in DockerLinuxContainerRuntime<br>
