--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                 <br>
 		<b>$ echo <font color="#E84A27">"I'm teaching <a href="https://cs523-uiuc.github.io/fall20/index.html", target="_blank">CS 523 (Advanced Operating Systems)</a> in Fall 2020. Check it out!</font></b>
 		<br>					  
-		<b>$ echo <font color="#E84A27">"I'm co-organizing <a href="https://systems-seminar-uiuc.github.io", target="_blank">UIUC System Seminar</a> with <a href="http://indy.cs.illinois.edu/", target="_blank">Indy</a> and <a href="http://ry2.web.engr.illinois.edu/", target="_blank">Rui</a>."</font></b>
+		<b>$ echo <font color="#E84A27">"I'm co-organizing <a href="https://systems-seminar-uiuc.github.io", target="_blank">UIUC System Reading Group</a> with <a href="http://indy.cs.illinois.edu/", target="_blank">Indy</a> and <a href="http://ry2.web.engr.illinois.edu/", target="_blank">Rui</a>."</font></b>
 		<br>
 		<b>$ echo <font color="#E84A27">"I'm co-organizing <a href="https://wiki.illinois.edu//wiki/display/SoftEng", target="_blank">Software Engineering Seminar</a> with <a href="http://misailo.cs.illinois.edu/", target="_blank">Sasa</a> and <a href="http://mir.cs.illinois.edu/marinov/", target="_blank">Darko</a>."</font></b>
               </TD>
