--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
-				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, co-advised by Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a></p>
+				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, co-advised by Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> (<font color="red">3M Foundation Fellowship</font>)</p>
                                   <p class="STYLE223">Neil Zhao, co-advised by Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a></p>
                                   <p class="STYLE223"><a href="https://sampalomad.github.io/" target="_blank">Sam Cheng</a>, co-advised by Professor <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
                                   <p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a></p>
@@ -440,7 +440,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 				  <p class="STYLE223">Andrew Yoo</p>
 				  <p class="STYLE223"><a href="https://x-czh.github.io/" target="_blank">Zhanghao Chen</a></p>
 				  <p class="STYLE223">Lilia Tang</p>
-				  <p class="STYLE223">Jinghao Jia</p>
+				  <p class="STYLE223">Jinghao Jia (<font color="red">UIUC CS Excellence Award</font>)</p>
 				  <p class="STYLE223">YiFei Zhu</p>
                              </TD>
                           </TR>
