--- a/index.html
+++ b/index.html
@@ -432,15 +432,15 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
-				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, co-advised by Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> (<font color="red">3M Foundation Fellowship</font>)</p>
+				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, co-advised by Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> (<font color="#E84A27">3M Foundation Fellowship</font>)</p>
                                   <p class="STYLE223">Neil Zhao, co-advised by Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a></p>
                                   <p class="STYLE223"><a href="https://sampalomad.github.io/" target="_blank">Sam Cheng</a>, co-advised by Professor <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
                                   <p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a></p>
 				  <p class="STYLE223">Jack Chen</p>
-				  <p class="STYLE223">Andrew Yoo (<a href="https://cs.illinois.edu/news/five-cs-graduate-students-2021-siebel-scholars" target="_blank"><font color="red">Siebel Scholar</font></a>)</p>
+				  <p class="STYLE223">Andrew Yoo (<a href="https://cs.illinois.edu/news/five-cs-graduate-students-2021-siebel-scholars" target="_blank"><font color="#E84A27">Siebel Scholar</font></a>)</p>
 				  <p class="STYLE223"><a href="https://x-czh.github.io/" target="_blank">Zhanghao Chen</a></p>
 				  <p class="STYLE223">Lilia Tang</p>
-				  <p class="STYLE223">Jinghao Jia (<font color="red">UIUC CS Excellence Award</font>)</p>
+				  <p class="STYLE223">Jinghao Jia (<font color="#E84A27">UIUC CS Excellence Award</font>)</p>
 				  <p class="STYLE223">YiFei Zhu</p>
                              </TD>
                           </TR>
@@ -452,7 +452,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
-				  <p class="STYLE223"><a href="https://www.linkedin.com/in/qingrongchen/" target="_blank">Qingrong Chen</a> (M.S. 2020, <a href="http://www.cs.illinois.edu/news/meet-siebel-scholars-class-2020" target="_blank"><font color="red">Siebel Scholar</font></a>) &rarr; Facebook </p>
+				  <p class="STYLE223"><a href="https://www.linkedin.com/in/qingrongchen/" target="_blank">Qingrong Chen</a> (M.S. 2020, <a href="http://www.cs.illinois.edu/news/meet-siebel-scholars-class-2020" target="_blank"><font color="#E84A27">Siebel Scholar</font></a>) &rarr; Facebook </p>
 				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a> (M.S. 2019) &rarr; Google</p>
                              </TD>
                           </TR>
