--- a/pub.html
+++ b/pub.html
@@ -61,11 +61,11 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-						<strong>Testing Configuration Changes in Context to Prevent Production Failures </strong> [<a href="ctest.pdf" target="_blank">pdf</a> | <a href="pub/ctest_bib.txt" target="_blank">bib</a>]
+						<strong>Testing Configuration Changes in Context to Prevent Production Failures </strong> [<a href="pub/ctest.pdf" target="_blank">pdf</a> | <a href="pub/ctest_bib.txt" target="_blank">bib</a>]
 						<br>
             					Xudong Sun*, Runxiang Cheng*, Jianyan Chen, Elaine Ang, Owolabi Legunsen, and Tianyin Xu, (*co-primary)
 						<br>
-						(To appear) In Proceedings of the 14th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'20</b></font>), Banff, Alberta, Canada, Nov. 2020.
+						In Proceedings of the 14th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'20</b></font>), Banff, Alberta, Canada, Nov. 2020.
 					</span>
 				</div>
 			</td>
@@ -80,7 +80,7 @@ td.papers {
 						<br>
             					Qingrong Chen, Teng Wang, Owolabi Legunsen, Shanshan Li, and Tianyin Xu,
 						<br>
-						(To appear) In Proceedings of the 2020 ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'20</b></font>), Sacramento, California, Nov. 2020.
+						In Proceedings of the 2020 ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'20</b></font>), Sacramento, California, Nov. 2020.
 					</span>
 				</div>
 			</td>
@@ -95,7 +95,7 @@ td.papers {
 						<br>
             					Saurabh Jha, Shengkun Cui, Subho Banerjee, Tianyin Xu, Jeremy Enos, Mike Showerman, Zbigniew T. Kalbarczyk, and Ravishankar K. Iyer,
 						<br>
-						(To appear) In Proceedings of the International Conference for High-Performance Computing, Networking, Storage and Analysis  (<font color="#083b89"><b>SC'20</b></font>), Atlanta, GA, Nov. 2020.
+						In Proceedings of the International Conference for High-Performance Computing, Networking, Storage and Analysis  (<font color="#083b89"><b>SC'20</b></font>), Atlanta, GA, Nov. 2020.
 					        <br>
 						<font color="#C40233"><b>Nominated for both Best Paper and Best Student Paper</b></font>
 					</span>
@@ -112,7 +112,9 @@ td.papers {
 						<br>
             					Dimitrios Skarlatos, Qingrong Chen, Jianyan Chen, Tianyin Xu, and Josep Torrellas,
 						<br>
-						(To appear) In Proceedings of the 53rd IEEE/ACM International Symposium on Microarchitecture (<font color="#083b89"><b>MICRO-53</b></font>), Athens, Greece, Oct. 2020.
+						In Proceedings of the 53rd IEEE/ACM International Symposium on Microarchitecture (<font color="#083b89"><b>MICRO-53</b></font>), Athens, Greece, Oct. 2020.
+						<br>
+						<a href="https://lore.kernel.org/bpf/cover.1602431034.git.yifeifz2@illinois.edu/" target="_blank">Draco is being upstreamed to the Linux kernel.</a>
 					</span>
 				</div>
 			</td>
