--- a/pub.html
+++ b/pub.html
@@ -65,7 +65,7 @@ td.papers {
 						<br>
             					Xudong Sun*, Runxiang Cheng*, Jianyan Chen, Elaine Ang, Owolabi Legunsen, and Tianyin Xu, (*co-primary)
 						<br>
-						In Proceedings of the 14th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'20</b></font>), Banff, Alberta, Canada, Nov. 2020.
+						In Proceedings of the 14th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'20</b></font>), Virtual Event, Nov. 2020.
 					</span>
 				</div>
 			</td>
@@ -80,7 +80,7 @@ td.papers {
 						<br>
             					Qingrong Chen, Teng Wang, Owolabi Legunsen, Shanshan Li, and Tianyin Xu,
 						<br>
-						In Proceedings of the 2020 ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'20</b></font>), Sacramento, California, Nov. 2020.
+						In Proceedings of the 2020 ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'20</b></font>), Virtual Event, Nov. 2020.
 					</span>
 				</div>
 			</td>
@@ -95,7 +95,7 @@ td.papers {
 						<br>
             					Saurabh Jha, Shengkun Cui, Subho Banerjee, Tianyin Xu, Jeremy Enos, Mike Showerman, Zbigniew T. Kalbarczyk, and Ravishankar K. Iyer,
 						<br>
-						In Proceedings of the International Conference for High-Performance Computing, Networking, Storage and Analysis  (<font color="#083b89"><b>SC'20</b></font>), Atlanta, GA, Nov. 2020.
+						In Proceedings of the International Conference for High-Performance Computing, Networking, Storage and Analysis  (<font color="#083b89"><b>SC'20</b></font>), Virtual Event, Nov. 2020.
 					        <br>
 						<font color="#C40233"><b>Nominated for both Best Paper and Best Student Paper</b></font>
 					</span>
@@ -112,9 +112,9 @@ td.papers {
 						<br>
             					Dimitrios Skarlatos, Qingrong Chen, Jianyan Chen, Tianyin Xu, and Josep Torrellas,
 						<br>
-						In Proceedings of the 53rd IEEE/ACM International Symposium on Microarchitecture (<font color="#083b89"><b>MICRO-53</b></font>), Athens, Greece, Oct. 2020.
+						In Proceedings of the 53rd IEEE/ACM International Symposium on Microarchitecture (<font color="#083b89"><b>MICRO-53</b></font>), Virtual Event, Oct. 2020.
 						<br>
-						<a href="https://lore.kernel.org/bpf/cover.1602431034.git.yifeifz2@illinois.edu/" target="_blank">Draco is being upstreamed to the Linux kernel.</a>
+						<a href="https://lore.kernel.org/bpf/cover.1602431034.git.yifeifz2@illinois.edu/" target="_blank">Draco is being upstreamed to the Linux kernel</a>
 					</span>
 				</div>
 			</td>
@@ -129,7 +129,7 @@ td.papers {
 						<br>
             					Hsuan-Chi Kuo, Jianyan Chen, Sibin Mohan, and Tianyin Xu,
 						<br>
-						In Proceedings of the 2020 ACM SIGMETRICS Conference (<font color="#083b89"><b>Sigmetrics'20</b></font>), Boston, Massachusetts, June 2020.
+						In Proceedings of the 2020 ACM SIGMETRICS Conference (<font color="#083b89"><b>Sigmetrics'20</b></font>), Virtual Event, June 2020.
 					</span>
 				</div>
 			</td>
@@ -144,7 +144,7 @@ td.papers {
 						<br>
             					Dimitrios Skarlatos, Apostolos Kokolis, Tianyin Xu, and Josep Torrellas,
 						<br>
-						In Proceedings of the 25th International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'20</b></font>), Lausanne, Switzerland, Mar. 2020.
+						In Proceedings of the 25th International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'20</b></font>), Virtual Event, Mar. 2020.
 						<br>
 						<font color="#C40233"><b>Best Paper Award</b></font>
 					</span>
