--- a/pub.html
+++ b/pub.html
@@ -61,7 +61,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-						<strong>Testing Configuration Changes in Context to Prevent Production Failures </strong> [<a href="pub/ctest.pdf" target="_blank">pdf</a> | <a href="pub/ctest_bib.txt" target="_blank">bib</a>]
+						<strong>Testing Configuration Changes in Context to Prevent Production Failures </strong> [<a href="pub/ctest.pdf" target="_blank">pdf</a> | <a href="pub/ctest_bib.txt" target="_blank">bib</a> | <a href="https://github.com/xlab-uiuc/openctest" target="_blank">code</a>]
 						<br>
             					Xudong Sun*, Runxiang Cheng*, Jianyan Chen, Elaine Ang, Owolabi Legunsen, and Tianyin Xu, (*co-primary)
 						<br>
