--- a/pub.html
+++ b/pub.html
@@ -97,7 +97,7 @@ td.papers {
 						<br>
 						In Proceedings of the International Conference for High-Performance Computing, Networking, Storage and Analysis  (<font color="#083b89"><b>SC'20</b></font>), Virtual Event, Nov. 2020.
 					        <br>
-						<font color="#C40233"><b>Nominated for both Best Paper and Best Student Paper</b></font>
+						<font color="#C40233">Nominated for both Best Paper and Best Student Paper</font>
 					</span>
 				</div>
 			</td>
