--- a/index.html
+++ b/index.html
@@ -451,8 +451,8 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
-				  <p class="STYLE223"><a href="https://www.linkedin.com/in/qingrongchen/" target="_blank">Qingrong Chen</a> (M.S. 2020, <a href="http://www.cs.illinois.edu/news/meet-siebel-scholars-class-2020" target="_blank"><font color="#E84A27">Siebel Scholar</font></a>) &rarr; Facebook </p>
-				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a> (M.S. 2019) &rarr; Google</p>
+				  <p class="STYLE223"><a href="https://www.linkedin.com/in/qingrongchen/" target="_blank">Qingrong Chen</a> (M.S. 2020, <a href="http://www.cs.illinois.edu/news/meet-siebel-scholars-class-2020" target="_blank"><font color="#E84A27">Siebel Scholar</font></a>) &rarr; Facebook (AI Infra) </p>
+				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a> (M.S. 2019) &rarr; Google (Spanner)</p>
                              </TD>
                           </TR>
 
