--- a/index.html
+++ b/index.html
@@ -395,11 +395,15 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                       <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
+                  <p class="STYLE223">Area Chair on Configuration Management for Systems, 
+		      <a href="jsys.org" target="_blank">Journal of Systems Research</a> 
+		     (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860" target="_blank">Why submit to JSys?</a>) 
+	          </p>
                   <p class="STYLE223">2021
 	            <a href="https://2021.eurosys.org/" target="_blank">EuroSys (sponsorship co-chair)</a>,
                     <a href="https://conf.researchr.org/home/icse-2021" target="_blank">ICSE</a>,
-          	      </p>
-                    <p class="STYLE223">2020
+          	  </p>
+                  <p class="STYLE223">2020
 		    <a href="https://www.usenix.org/conference/osdi20" target="_blank">OSDI</a>,
                     <a href="https://www.sigmobile.org/mobisys/2020/" target="_blank">MobiSys</a>,
                     <a href="https://edge-sys.github.io/2020/submission.html" target="_blank">EdgeSys</a>,
