--- a/index.html
+++ b/index.html
@@ -395,9 +395,9 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                       <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
-                  <p class="STYLE223">Area Chair on Configuration Management for Systems, 
+                  <p class="STYLE223">Area Chair on Configuration Management, 
 		      <a href="jsys.org" target="_blank">Journal of Systems Research</a> 
-		     (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860" target="_blank">Why submit to JSys?</a>) 
+		     (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860" target="_blank">Why JSys?</a>) 
 	          </p>
                   <p class="STYLE223">2021
 	            <a href="https://2021.eurosys.org/" target="_blank">EuroSys (sponsorship co-chair)</a>,
