--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
                   <p class="STYLE223">Area Chair on Configuration Management, 
-		      <a href="jsys.org" target="_blank">Journal of Systems Research</a> 
+		      <a href="https://escholarship.org/uc/jsys/about" target="_blank">Journal of Systems Research</a> 
 		     (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860" target="_blank">Why JSys?</a>) 
 	          </p>
                   <p class="STYLE223">2021
