--- a/pub.html
+++ b/pub.html
@@ -8,6 +8,11 @@
 
 td.date {
     font-weight: bold;
+    text-align: center;
+}
+
+td.dates {
+    font-weight: bold;
     nofont-size: 12pt;
     novertical-align: top;
     text-align: center;
@@ -56,7 +61,8 @@ td.papers {
   <!--DWLayoutTable-->
   <tbody>
 
-    <td class="date"><font color="#083b89">OSDI'20</font></td>
+    <tr>
+      <td class="date"><font color="#083b89">OSDI'20</font></td>
   		<td class="papers">
 				<div align="justify" class="STYLE4">
 					<p></p>
@@ -71,7 +77,8 @@ td.papers {
 			</td>
 		</tr>
 
-    <td class="date"><font color="#083b89">FSE'20</font></td>
+    <tr>
+      <td class="date"><font color="#083b89">FSE'20</font></td>
   		<td class="papers">
 				<div align="justify" class="STYLE4">
 					<p></p>
@@ -86,7 +93,8 @@ td.papers {
 			</td>
 		</tr>
 
-    <td class="date"><font color="#083b89">SC'20</font></td>
+    <tr>
+      <td class="date"><font color="#083b89">SC'20</font></td>
   		<td class="papers">
 				<div align="justify" class="STYLE4">
 					<p></p>
@@ -103,7 +111,8 @@ td.papers {
 			</td>
 		</tr>
 
-    <td class="date"><font color="#083b89">MICRO'20</font></td>
+    <tr>
+      <td class="date"><font color="#083b89">MICRO'20</font></td>
   		<td class="papers">
 				<div align="justify" class="STYLE4">
 					<p></p>
@@ -120,7 +129,8 @@ td.papers {
 			</td>
 		</tr>
 
-    <td class="date"><font color="#083b89">Sigmetrics'20</font></td>
+    <tr>
+      <td class="date"><font color="#083b89">Sigmetrics'20</font></td>
   		<td class="papers">
 				<div align="justify" class="STYLE4">
 					<p></p>
@@ -135,7 +145,8 @@ td.papers {
 			</td>
 		</tr>
 
-    <td class="date"><font color="#083b89">ASPLOS'20</font></td>
+    <tr>
+      <td class="date"><font color="#083b89">ASPLOS'20</font></td>
   		<td class="papers">
 				<div align="justify" class="STYLE4">
 					<p></p>
@@ -151,6 +162,7 @@ td.papers {
 				</div>
 			</td>
 		</tr>
+
     <tr>
     	<td class="date"><font color="#083b89">FAST'20</font></td>
   		<td class="papers">
@@ -485,11 +497,14 @@ td.papers {
 			<td class="date">&nbsp;</td>
 			<td class="papers">&nbsp;</td>
 		</tr>
-</tbody></table>
+  </tbody>
+</table>
 
 <table width="90%" align="center">
   <!--DWLayoutTable-->
-  <tbody><tr>
+  <tbody>
+
+  <tr>
     <td width="1016" bgcolor="#083b89" height="3"></td>
   </tr>
   <tr>
@@ -500,8 +515,9 @@ td.papers {
 		2009-06-23
 		<!--webbot bot="Timestamp" i-checksum="12524" endspan -->
 		 by <a href="index.html">Tianyin Xu</a> </font></p>
-	</td>
+	  </td>
   </tr>
-</tbody></table>
+  </tbody>
+</table>
 
 </body></html>
