--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
-				  <p class="STYLE223"><a href="https://www.linkedin.com/in/qingrongchen/" target="_blank">Qingrong Chen</a> (M.S. 2020, <a href="http://www.cs.illinois.edu/news/meet-siebel-scholars-class-2020" target="_blank"><font color="#E84A27">Siebel Scholar</font></a>, <a href="https://www.ideals.illinois.edu/handle/2142/108029" target="_blank">thesis</a>) &rarr; Facebook (AI Infra) </p>
+				  <p class="STYLE223"><a href="https://chenqingrong.github.io/" target="_blank">Qingrong Chen</a> (M.S. 2020, <a href="http://www.cs.illinois.edu/news/meet-siebel-scholars-class-2020" target="_blank"><font color="#E84A27">Siebel Scholar</font></a>, <a href="https://www.ideals.illinois.edu/handle/2142/108029" target="_blank">thesis</a>) &rarr; Facebook (AI Infra) </p>
 				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a> (M.S. 2019, <a href="https://www.ideals.illinois.edu/handle/2142/106384" target="_blank">thesis</a>) &rarr; Google (Spanner)</p>
                              </TD>
                           </TR>
