--- a/index.html
+++ b/index.html
@@ -482,6 +482,18 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 			        </TD>
 				<TD class=content_title>&nbsp;</TD>
 			 </TR>
+			
+		      <TD width="0.5%">&nbsp;</TD>
+			 <TR>
+			   <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=hobbies id="hobbies"></A></span><b>$ cat debts</b></span></TD>
+			   </TR>
+			     <TR>
+				<TD class=content_title>&nbsp;</TD>
+			        <TD class=content width="96%">
+				  <p class="STYLE223">I own everyone in <a href="https://cs523-uiuc.github.io/fall20/" target="_blank">Fall 2020 CS-523</a> a donut due to the COVID-19 pandemic.</p>
+			        </TD>
+				<TD class=content_title>&nbsp;</TD>
+			 </TR>
 
                       </TBODY>
                   </TABLE></TD>
