--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                                   <p class="STYLE223"><a href="https://sampalomad.github.io/" target="_blank">Sam Cheng</a>, co-advised by Professor <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
                                   <p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a></p>
 				  <p class="STYLE223">Jack Chen</p>
-				  <p class="STYLE223">Andrew Yoo (<a href="https://cs.illinois.edu/news/five-cs-graduate-students-2021-siebel-scholars" target="_blank"><font color="#E84A27">Siebel Scholar</font></a>)</p>
+				  <p class="STYLE223">Andrew Yoo (<a href="https://cs.illinois.edu/news/five-cs-graduate-students-2021-siebel-scholars" target="_blank"><font color="#E84A27">Siebel Scholar</font></a>), co-advised by Professor <a href="http://mpaxos.com/" target="_blank">Shuai Mu</a></p>
 				  <p class="STYLE223"><a href="https://x-czh.github.io/" target="_blank">Zhanghao Chen</a></p>
 				  <p class="STYLE223">Lilia Tang</p>
 				  <p class="STYLE223">Jinghao Jia (<font color="#E84A27">UIUC CS Excellence Award</font>)</p>
