--- a/index.html
+++ b/index.html
@@ -268,16 +268,18 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 
                     <TABLE width="100%" border=0 cellPadding=0 cellSpacing=0 bgcolor="#FFFFFF" id=Table6>
                       <TBODY>
-						  <TR>
-						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px; line-height:150%;"><span class="style121"><A name=researchint id="researchint"></A></span>
+		<TR>
+		<TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px; line-height:150%;"><span class="style121"><A name=researchint id="researchint"></A></span>
                 <b>$ echo <font color="#E84A27">"Join us on UIUC SysNet Slack channels: <a href="https://join.slack.com/t/uiuc-sysnet/signup", target="_blank">uiuc-sysnet.slack.com</a>."</font></b>
-                <br>				  
-		<b>$ echo <font color="#E84A27">"I'm co-organizing <a href="https://systems-seminar-uiuc.github.io", target="_blank">UIUC System Reading Group</a> with <a href="http://indy.cs.illinois.edu/", target="_blank">Indy</a> and <a href="http://ry2.web.engr.illinois.edu/", target="_blank">Rui</a>."</font></b>
+                <br>
+		<b>$ echo <font color="#E84A27">"Please consider contributing to <a href="https://www.sigops.org/blog/", target="_blank">SIGOPS Blog</a>."</font></b>
 		<br>
-		<b>$ echo <font color="#E84A27">"I'm co-organizing <a href="https://wiki.illinois.edu//wiki/display/SoftEng", target="_blank">Software Engineering Seminar</a> with <a href="http://misailo.cs.illinois.edu/", target="_blank">Sasa</a> and <a href="http://mir.cs.illinois.edu/marinov/", target="_blank">Darko</a>."</font></b>
-              </TD>
-                          </TR>
-							          <TD width="0.5%">&nbsp;</TD>
+		<b>$ echo <font color="#E84A27">"Please consider submitting to <a href="https://escholarship.org/uc/jsys/about", target="_blank">JSys</a> (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860">Why JSys?</a>)"</font></b>
+		<br>
+		<b>$ echo <font color="#E84A27">"I'm co-organizing <a href="https://systems-seminar-uiuc.github.io", target="_blank">UIUC System Reading Group</a> with <a href="http://indy.cs.illinois.edu/", target="_blank">Indy</a> and <a href="http://ry2.web.engr.illinois.edu/", target="_blank">Rui</a>."</font></b>
+	        </TD>
+                </TR>
+		<TD width="0.5%">&nbsp;</TD>
 
 
                         <TR>
@@ -395,6 +397,9 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                       <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
+	          <p class="STYLE223">
+	              Co-editor of <a href="https://www.sigops.org/blog/" target="_blank">SIGOPS Blog</a> 
+	          </p>
                   <p class="STYLE223">Area Chair on Configuration Management, 
 		      <a href="https://escholarship.org/uc/jsys/about" target="_blank">Journal of Systems Research</a> 
 		     (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860" target="_blank">Why JSys?</a>) 
