--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                 <br>
 		<b>$ echo <font color="#E84A27">"Please consider contributing to <a href="https://www.sigops.org/blog/", target="_blank">SIGOPS Blog</a>."</font></b>
 		<br>
-		<b>$ echo <font color="#E84A27">"Please consider submitting to <a href="https://escholarship.org/uc/jsys/about", target="_blank">JSys</a> (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860">Why JSys?</a>)"</font></b>
+		<b>$ echo <font color="#E84A27">"Please consider submitting your work to <a href="https://escholarship.org/uc/jsys/about", target="_blank">JSys</a> (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860">Why JSys?</a>)"</font></b>
 		<br>
 		<b>$ echo <font color="#E84A27">"I'm co-organizing <a href="https://systems-seminar-uiuc.github.io", target="_blank">UIUC System Reading Group</a> with <a href="http://indy.cs.illinois.edu/", target="_blank">Indy</a> and <a href="http://ry2.web.engr.illinois.edu/", target="_blank">Rui</a>."</font></b>
 	        </TD>
