--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 					      <TD class=content width="96%">
 							<p class="STYLE223">The goal of my research is to make computer systems reliable and secure. My mission is to help today's systems defend against all kinds of errors and defects, such as software bugs, configuration errors, and design flaws. I am very happy that some of our work helps improve real software systems (<a href="report.html">issues</a> we helped/fixed).</p>
 							<p class="STYLE223">I am interested in all kinds of black magic. My view of systems research is to build the right swords to kill the dragon (not windmills).</p>
-						        <p class="STYLE223">One of my favorite topics is <a href="https://github.com/tianyin/configuration-management-papers" target="_blank">configuration management</a>; on the other hand, I have overly broad interests in anything computer systems and have trouble focusing.</p>
+						        <p class="STYLE223">One of my favorite topics is <a href="https://github.com/tianyin/configuration-management-papers" target="_blank">configuration management for systems</a>; on the other hand, I have too broad interests in anything computer systems and often have trouble focusing.</p>
 						  </TD>
                           </TR>
 		          <TD width="0.5%">&nbsp;</TD>
