--- a/pub.html
+++ b/pub.html
@@ -60,7 +60,22 @@ td.papers {
 <table width="90%" align="center" border="0" height="1">
   <!--DWLayoutTable-->
   <tbody>
-
+    <tr>
+      <td class="date"><font color="#083b89">ICSE'21</font></td>
+  		<td class="papers">
+				<div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						<strong>An Evolutionary Study of Configuration Design and Implementation in Cloud Systems </strong> [<a href="pub/cevo.pdf" target="_blank">pdf</a> | <a href="pub/cevo_bib.txt" target="_blank">bib</a> | <a href="https://github.com/xlab-uiuc/cevo" target="_blank">code</a>]
+						<br>
+            					Yuanliang Zhang, Haochen He, Owolabi Legunsen, Shanshan Li, Wei Dong, and Tianyin Xu
+						<br>
+						In Proceedings of the 43rd International Conference on Software Engineering (<font color="#083b89"><b>ICSE'21</b></font>), Virtual Event, May 2021.
+					</span>
+				</div>
+			</td>
+		</tr>
+	  
     <tr>
       <td class="date"><font color="#083b89">OSDI'20</font></td>
   		<td class="papers">
