--- a/pub.html
+++ b/pub.html
@@ -75,6 +75,20 @@ td.papers {
 				</div>
 			</td>
 		</tr>
+      <td class="date"><font color="#083b89">NSDI'21</font></td>
+  		<td class="papers">
+				<div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						<strong>Fast and Light Bandwidth Testing for Internet Users</strong> [<a href="pub/fastbts.pdf" target="_blank">pdf</a> | <a href="pub/fastbts_bib.txt" target="_blank">bib</a>]
+						<br>
+            					Xinlei Yang, Xianlong Wang, Zhenhua Li, Feng Qian, Liangyi Gong, Rui Miao, Yunhao Liu, and Tianyin Xu
+						<br>
+						In Proceedings of the 18th USENIX Symposium on Networked Systems Design and Implementation (<font color="#083b89"><b>NSDI'21</b></font>), Virtual Event, April 2021.
+					</span>
+				</div>
+			</td>
+		</tr>
 	  
     <tr>
       <td class="date"><font color="#083b89">OSDI'20</font></td>
