--- a/index.html
+++ b/index.html
@@ -447,7 +447,6 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                                   <p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a></p>
 				  <p class="STYLE223">Jack Chen</p>
 				  <p class="STYLE223">Andrew Yoo (<a href="https://cs.illinois.edu/news/five-cs-graduate-students-2021-siebel-scholars" target="_blank"><font color="#E84A27">Siebel Scholar</font></a>), co-advised by Professor <a href="http://mpaxos.com/" target="_blank">Shuai Mu</a></p>
-				  <p class="STYLE223"><a href="https://x-czh.github.io/" target="_blank">Zhanghao Chen</a></p>
 				  <p class="STYLE223">Lilia Tang</p>
 				  <p class="STYLE223">Jinghao Jia (<font color="#E84A27">UIUC CS Excellence Award</font>)</p>
 				  <p class="STYLE223">YiFei Zhu</p>
@@ -461,6 +460,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
+				  <p class="STYLE223"><a href="https://x-czh.github.io/" target="_blank">Zhanghao Chen (MCS 2020, <a href="https://github.com/xlab-uiuc/cflow" target="_blank">project</a>) &rarr; ByteDance (Stream computing infra)</a></p>
 				  <p class="STYLE223"><a href="https://chenqingrong.github.io/" target="_blank">Qingrong Chen</a> (M.S. 2020, <a href="http://www.cs.illinois.edu/news/meet-siebel-scholars-class-2020" target="_blank"><font color="#E84A27">Siebel Scholar</font></a>, <a href="https://www.ideals.illinois.edu/handle/2142/108029" target="_blank">thesis</a>) &rarr; Facebook (AI Infra) </p>
 				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a> (M.S. 2019, <a href="https://www.ideals.illinois.edu/handle/2142/106384" target="_blank">thesis</a>) &rarr; Google (Spanner)</p>
                              </TD>
