--- a/pub.html
+++ b/pub.html
@@ -152,7 +152,7 @@ td.papers {
 						<br>
 						In Proceedings of the 53rd IEEE/ACM International Symposium on Microarchitecture (<font color="#083b89"><b>MICRO-53</b></font>), Virtual Event, Oct. 2020.
 						<br>
-						<a href="https://lore.kernel.org/bpf/cover.1602431034.git.yifeifz2@illinois.edu/" target="_blank">Draco is being upstreamed to the Linux kernel</a>
+						<font color="#C40233"><b>Draco has been upstreamed to the Linux kernel</b></font> [<a href="https://lore.kernel.org/bpf/cover.1602431034.git.yifeifz2@illinois.edu/" target="_blank">rfc</a> | <a href="https://github.com/torvalds/linux/search?p=1&q=yifei+seccomp&type=commits" target="_blank">code</a>] (<a href="https://lwn.net/Articles/834785/" target="_blank">LWN</a>, <a href="https://www.phoronix.com/scan.php?page=news_item&px=Linux-5.11-SECCOMP-Performance" target="_blank">Phoronix</a>)
 					</span>
 				</div>
 			</td>
