--- a/index.html
+++ b/index.html
@@ -406,6 +406,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 		     (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860" target="_blank">Why JSys?</a>) 
 	          </p>
                   <p class="STYLE223">2021
+	            <a href="https://sigops.org/s/conferences/hotos/2021/" target="_blank">HotOS</a>,
 	            <a href="https://2021.eurosys.org/" target="_blank">EuroSys (sponsorship co-chair)</a>,
                     <a href="https://conf.researchr.org/home/icse-2021" target="_blank">ICSE</a>,
           	  </p>
