--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 				  <p class="STYLE223">Jack Chen</p>
 				  <p class="STYLE223">Andrew Yoo (<a href="https://cs.illinois.edu/news/five-cs-graduate-students-2021-siebel-scholars" target="_blank"><font color="#E84A27">Siebel Scholar</font></a>), co-advised by Professor <a href="http://mpaxos.com/" target="_blank">Shuai Mu</a></p>
 				  <p class="STYLE223">Lilia Tang (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/ray-ozzie-computer-science-fellowship" target="_blank"><font color="#E84A27">Ray Ozzie Fellowship</font></a>)</p>
-				  <p class="STYLE223">Jinghao Jia (<font color="#E84A27">UIUC CS Excellence Award</font>)</p>
+				  <p class="STYLE223">Jinghao Jia (<font color="#E84A27">Richard T. Cheng Fellowship</font>)</p>
 				  <p class="STYLE223">YiFei Zhu</p>
                              </TD>
                           </TR>
