--- a/index.html
+++ b/index.html
@@ -410,6 +410,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 	            <a href="https://sigops.org/s/conferences/hotos/2021/" target="_blank">HotOS</a>,
 	            <a href="https://2021.eurosys.org/" target="_blank">EuroSys (sponsorship co-chair)</a>,
                     <a href="https://conf.researchr.org/home/icse-2021" target="_blank">ICSE</a>,
+	            <a href="http://www.sigmetrics.org/sigmetrics2021/call_for_src.html" target="_blank">Sigmetrics SRC</a>,
           	  </p>
                   <p class="STYLE223">2020
 		    <a href="https://www.usenix.org/conference/osdi20" target="_blank">OSDI</a>,
