--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 			     <TR>
 				<TD class=content_title>&nbsp;</TD>
 			        <TD class=content width="96%">
-				  <p class="STYLE223">I own everyone in <a href="https://cs523-uiuc.github.io/fall20/" target="_blank">Fall 2020 CS-523</a> a donut due to the COVID-19 pandemic.</p>
+				  <p class="STYLE223">I owe everyone in <a href="https://cs523-uiuc.github.io/fall20/" target="_blank">Fall 2020 CS-523</a> a donut due to the COVID-19 pandemic.</p>
 			        </TD>
 				<TD class=content_title>&nbsp;</TD>
 			 </TR>
