--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
             </TR>
                     <TD width="0.5%">&nbsp;</TD>
                       <TR>
-                        <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=ha id="ha"></A></span><b>$ head impact</b></span></TD>
+                        <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=ha id="ha"></A></span><b>$ cat impact</b></span></TD>
                           </TR>
                         <TR>
                         <TD class=content_title>&nbsp;</TD>
