--- a/pub.html
+++ b/pub.html
@@ -66,7 +66,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-						<strong>An Evolutionary Study of Configuration Design and Implementation in Cloud Systems </strong> [<a href="pub/cevo.pdf" target="_blank">pdf</a> | <a href="pub/cevo_bib.txt" target="_blank">bib</a> | <a href="https://github.com/xlab-uiuc/cevo" target="_blank">code</a>]
+						<strong>An Evolutionary Study of Configuration Design and Implementation in Cloud Systems </strong> [<a href="pub/cevo.pdf" target="_blank">pdf</a> | <a href="pub/cevo_bib.txt" target="_blank">bib</a> | <a href="https://github.com/xlab-uiuc/open-cevo" target="_blank">code</a>]
 						<br>
             					Yuanliang Zhang, Haochen He, Owolabi Legunsen, Shanshan Li, Wei Dong, and Tianyin Xu
 						<br>
