--- a/pub.html
+++ b/pub.html
@@ -66,11 +66,13 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-						<strong>An Evolutionary Study of Configuration Design and Implementation in Cloud Systems </strong> [<a href="https://arxiv.org/pdf/2102.07052.pdf" target="_blank">pdf</a> | <a href="pub/cevo_bib.txt" target="_blank">bib</a> | <a href="https://github.com/xlab-uiuc/open-cevo" target="_blank">code</a>]
+						<strong>An Evolutionary Study of Configuration Design and Implementation in Cloud Systems </strong> [<a href="https://arxiv.org/pdf/2102.07052.pdf" target="_blank">pdf</a> | <a href="pub/cevo_bib.txt" target="_blank">bib</a>]
 						<br>
             					Yuanliang Zhang, Haochen He, Owolabi Legunsen, Shanshan Li, Wei Dong, and Tianyin Xu
 						<br>
 						In Proceedings of the 43rd International Conference on Software Engineering (<font color="#083b89"><b>ICSE'21</b></font>), Virtual Event, May 2021.
+						<br>
+						Data/code available: <a href="https://github.com/xlab-uiuc/open-cevo" target="_blank">open-cevo</a>
 					</span>
 				</div>
 			</td>
@@ -85,6 +87,8 @@ td.papers {
             					Xinlei Yang, Xianlong Wang, Zhenhua Li, Feng Qian, Liangyi Gong, Rui Miao, Yunhao Liu, and Tianyin Xu
 						<br>
 						In Proceedings of the 18th USENIX Symposium on Networked Systems Design and Implementation (<font color="#083b89"><b>NSDI'21</b></font>), Virtual Event, April 2021.
+						<br>
+						Code available: <a href="http://fastbts.thucloud.com/" target="_blank">fastbts</a>
 					</span>
 				</div>
 			</td>
@@ -96,11 +100,13 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-						<strong>Testing Configuration Changes in Context to Prevent Production Failures </strong> [<a href="pub/ctest.pdf" target="_blank">pdf</a> | <a href="pub/ctest_bib.txt" target="_blank">bib</a> | <a href="https://github.com/xlab-uiuc/openctest" target="_blank">code</a>]
+						<strong>Testing Configuration Changes in Context to Prevent Production Failures </strong> [<a href="pub/ctest.pdf" target="_blank">pdf</a> | <a href="pub/ctest_bib.txt" target="_blank">bib</a>]
 						<br>
             					Xudong Sun*, Runxiang Cheng*, Jianyan Chen, Elaine Ang, Owolabi Legunsen, and Tianyin Xu, (*co-primary)
 						<br>
 						In Proceedings of the 14th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'20</b></font>), Virtual Event, Nov. 2020.
+						<br>
+						Code/data available: <a href="https://github.com/xlab-uiuc/openctest" target="_blank">openctest</a>
 					</span>
 				</div>
 			</td>
@@ -112,11 +118,13 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-						<strong>Understanding and Discovering Software Configuration Dependencies in Cloud and Datacenter Systems</strong> [<a href="pub/cdep.pdf" target="_blank">pdf</a> | <a href="pub/cdep_bib.txt" target="_blank">bib</a> | <a href="https://github.com/xlab-uiuc/cdep-fse" target="_blank">code</a>]
+						<strong>Understanding and Discovering Software Configuration Dependencies in Cloud and Datacenter Systems</strong> [<a href="pub/cdep.pdf" target="_blank">pdf</a> | <a href="pub/cdep_bib.txt" target="_blank">bib</a>]
 						<br>
             					Qingrong Chen, Teng Wang, Owolabi Legunsen, Shanshan Li, and Tianyin Xu,
 						<br>
 						In Proceedings of the 2020 ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'20</b></font>), Virtual Event, Nov. 2020.
+						<br>
+						Code/data available: <a href="https://github.com/xlab-uiuc/cdep-fse" target="_blank">cdep</a>
 					</span>
 				</div>
 			</td>
@@ -164,11 +172,13 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-						<strong>Set the Configuration for the Heart of the OS: On the Practicality of Operating System Kernel Debloating</strong> [<a href="pub/cozart.pdf" target="_blank">pdf</a> | <a href="pub/cozart_bib.txt" target="_blank">bib</a> | <a href="https://github.com/hckuo/Cozart" target="_blank">code</a>]
+						<strong>Set the Configuration for the Heart of the OS: On the Practicality of Operating System Kernel Debloating</strong> [<a href="pub/cozart.pdf" target="_blank">pdf</a> | <a href="pub/cozart_bib.txt" target="_blank">bib</a>]
 						<br>
             					Hsuan-Chi Kuo, Jianyan Chen, Sibin Mohan, and Tianyin Xu,
 						<br>
 						In Proceedings of the 2020 ACM SIGMETRICS Conference (<font color="#083b89"><b>Sigmetrics'20</b></font>), Virtual Event, June 2020.
+						<br>
+						Code available: <a href="https://github.com/hckuo/Cozart" target="_blank">cozart</a>
 					</span>
 				</div>
 			</td>
@@ -187,6 +197,8 @@ td.papers {
 						In Proceedings of the 25th International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'20</b></font>), Virtual Event, Mar. 2020.
 						<br>
 						<font color="#C40233"><b>Best Paper Award</b></font>
+						<br>
+						<font color="#C40233"><b>IEEE Micro Top Picks 2021 Honorable Mention</b></font>
 					</span>
 				</div>
 			</td>
@@ -203,6 +215,8 @@ td.papers {
             					Jian Chen, Minghao Zhao, Zhenhua Li, Ennan Zhai, Feng Qian, Hongyi Chen, and Yunhao Liu, and Tianyin Xu,
 						<br>
 						In Proceedings of the 18th USENIX Conference on File and Storage Technologies  (<font color="#083b89"><b>FAST'20</b></font>), Santa Clara, CA, Feb. 2020.
+						<br>
+						Code/data available: <a href="https://ufc2.github.io/" target="_blank">ufc</a>
 					</span>
 				</div>
 			</td>
@@ -220,6 +234,8 @@ td.papers {
                 				Yuanyuan Zhou, Cindy Moore, Xinxin Jin, and Tianwei Sheng,
     						<br>
     						In Proceedings of the 26th ACM Conference on Computer and Communications Security  (<font color="#083b89"><b>CCS'19</b></font>), London, UK, Nov. 2019.
+						<br>
+						Code available: <a href="https://github.com/EvonX/TimeChangingDecisionTree" target="_blank">tcdt</a>
     					</span>
     				</div>
     			</td>
@@ -237,6 +253,8 @@ td.papers {
             					Pol Mauri Ruiz, Justin Meza, Kiryong Ha, Shruti Padmanabha, Kevin Cole, and Dmitri Perelman
 						<br>
 						In Proceedings of the 27th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'19</b></font>), Huntsville, Ontario, Canada, Oct. 2019.
+						<br>
+						US Patent: <a href="https://patents.justia.com/patent/10931743" target="_blank">Systems and methods for dynamically generating routing tables for edge nodes in large-scale networking infrastructures</a>
 					</span>
 				</div>
 			</td>
