--- a/pub.html
+++ b/pub.html
@@ -72,7 +72,7 @@ td.papers {
 						<br>
 						In Proceedings of the 43rd International Conference on Software Engineering (<font color="#083b89"><b>ICSE'21</b></font>), Virtual Event, May 2021.
 						<br>
-						Data/code available: <a href="https://github.com/xlab-uiuc/open-cevo" target="_blank">open-cevo</a>
+						Data+code: <a href="https://github.com/xlab-uiuc/open-cevo" target="_blank">open-cevo</a>
 					</span>
 				</div>
 			</td>
@@ -88,7 +88,7 @@ td.papers {
 						<br>
 						In Proceedings of the 18th USENIX Symposium on Networked Systems Design and Implementation (<font color="#083b89"><b>NSDI'21</b></font>), Virtual Event, April 2021.
 						<br>
-						Code available: <a href="http://fastbts.thucloud.com/" target="_blank">fastbts</a>
+						Code: <a href="http://fastbts.thucloud.com/" target="_blank">fastbts</a>
 					</span>
 				</div>
 			</td>
@@ -106,7 +106,7 @@ td.papers {
 						<br>
 						In Proceedings of the 14th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'20</b></font>), Virtual Event, Nov. 2020.
 						<br>
-						Code/data available: <a href="https://github.com/xlab-uiuc/openctest" target="_blank">openctest</a>
+						Code+data: <a href="https://github.com/xlab-uiuc/openctest" target="_blank">openctest</a>
 					</span>
 				</div>
 			</td>
@@ -124,7 +124,7 @@ td.papers {
 						<br>
 						In Proceedings of the 2020 ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'20</b></font>), Virtual Event, Nov. 2020.
 						<br>
-						Code/data available: <a href="https://github.com/xlab-uiuc/cdep-fse" target="_blank">cdep</a>
+						Code+data: <a href="https://github.com/xlab-uiuc/cdep-fse" target="_blank">cdep</a>
 					</span>
 				</div>
 			</td>
@@ -178,7 +178,7 @@ td.papers {
 						<br>
 						In Proceedings of the 2020 ACM SIGMETRICS Conference (<font color="#083b89"><b>Sigmetrics'20</b></font>), Virtual Event, June 2020.
 						<br>
-						Code available: <a href="https://github.com/hckuo/Cozart" target="_blank">cozart</a>
+						Code: <a href="https://github.com/hckuo/Cozart" target="_blank">cozart</a>
 					</span>
 				</div>
 			</td>
@@ -216,7 +216,7 @@ td.papers {
 						<br>
 						In Proceedings of the 18th USENIX Conference on File and Storage Technologies  (<font color="#083b89"><b>FAST'20</b></font>), Santa Clara, CA, Feb. 2020.
 						<br>
-						Code/data available: <a href="https://ufc2.github.io/" target="_blank">ufc</a>
+						Code+data: <a href="https://ufc2.github.io/" target="_blank">ufc</a>
 					</span>
 				</div>
 			</td>
@@ -235,7 +235,7 @@ td.papers {
     						<br>
     						In Proceedings of the 26th ACM Conference on Computer and Communications Security  (<font color="#083b89"><b>CCS'19</b></font>), London, UK, Nov. 2019.
 						<br>
-						Code available: <a href="https://github.com/EvonX/TimeChangingDecisionTree" target="_blank">tcdt</a>
+						Code: <a href="https://github.com/EvonX/TimeChangingDecisionTree" target="_blank">tcdt</a>
     					</span>
     				</div>
     			</td>
