--- a/pub.html
+++ b/pub.html
@@ -72,7 +72,7 @@ td.papers {
 						<br>
 						In Proceedings of the 43rd International Conference on Software Engineering (<font color="#083b89"><b>ICSE'21</b></font>), Virtual Event, May 2021.
 						<br>
-						Data+code: <a href="https://github.com/xlab-uiuc/open-cevo" target="_blank">open-cevo</a>
+						Data and code: <a href="https://github.com/xlab-uiuc/open-cevo" target="_blank">open-cevo</a>
 					</span>
 				</div>
 			</td>
@@ -106,7 +106,7 @@ td.papers {
 						<br>
 						In Proceedings of the 14th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'20</b></font>), Virtual Event, Nov. 2020.
 						<br>
-						Code+data: <a href="https://github.com/xlab-uiuc/openctest" target="_blank">openctest</a>
+						Code and data: <a href="https://github.com/xlab-uiuc/openctest" target="_blank">openctest</a>
 					</span>
 				</div>
 			</td>
@@ -124,7 +124,7 @@ td.papers {
 						<br>
 						In Proceedings of the 2020 ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'20</b></font>), Virtual Event, Nov. 2020.
 						<br>
-						Code+data: <a href="https://github.com/xlab-uiuc/cdep-fse" target="_blank">cdep</a>
+						Code and data: <a href="https://github.com/xlab-uiuc/cdep-fse" target="_blank">cdep</a>
 					</span>
 				</div>
 			</td>
