--- a/pub.html
+++ b/pub.html
@@ -216,7 +216,7 @@ td.papers {
 						<br>
 						In Proceedings of the 18th USENIX Conference on File and Storage Technologies  (<font color="#083b89"><b>FAST'20</b></font>), Santa Clara, CA, Feb. 2020.
 						<br>
-						Code+data: <a href="https://ufc2.github.io/" target="_blank">ufc</a>
+						Code and data: <a href="https://ufc2.github.io/" target="_blank">ufc</a>
 					</span>
 				</div>
 			</td>
