--- a/index.html
+++ b/index.html
@@ -467,6 +467,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 				  <p class="STYLE223"><a href="https://x-czh.github.io/" target="_blank">Zhanghao Chen</a> (MCS 2020, <a href="https://github.com/xlab-uiuc/cflow" target="_blank">project</a>) &rarr; ByteDance (Stream Computing Infra)</a></p>
 				  <p class="STYLE223"><a href="https://chenqingrong.github.io/" target="_blank">Qingrong Chen</a> (MS 2020, <a href="http://www.cs.illinois.edu/news/meet-siebel-scholars-class-2020" target="_blank"><font color="#E84A27">Siebel Scholar</font></a>, <a href="https://www.ideals.illinois.edu/handle/2142/108029" target="_blank">thesis</a>) &rarr; Facebook (AI Infra) </p>
 				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a> (MS 2019, <a href="https://www.ideals.illinois.edu/handle/2142/106384" target="_blank">thesis</a>) &rarr; Google (Spanner)</p>
+				  <p class="STYLE223"><a href="thesis_committee.html" target="_blank">Thesis Committees</a></p>
                              </TD>
                           </TR>
 
