--- a/pub.html
+++ b/pub.html
@@ -199,6 +199,8 @@ td.papers {
 						<font color="#C40233"><b>Best Paper Award</b></font>
 						<br>
 						<font color="#C40233"><b>IEEE Micro Top Picks 2021 Honorable Mention</b></font>
+						<br>
+						Code: <a href="https://github.com/dskarlatos/ElasticCuckooHashing" target="_blank">elastic cuckoo hashing</a>
 					</span>
 				</div>
 			</td>
