--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -71,7 +71,7 @@ td.papers {
       <font color="#083b89">
         <div align="justify" class="STYLE4">
           <span style="font-size: 13pt;">
-          I am always excited to serve on PhD committees. It exposes me to research ideas and gives me a chance to participate in many interesting topics.
+          I am always excited to serve on thesis committees. It exposes me to research ideas and gives me a chance to participate in many interesting topics.
           Below is a list of PhD students whose committees I had the privileges to serve on.
           I copied the text from <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a>, because I completely agree with him.
           </span>
