--- a/pub.html
+++ b/pub.html
@@ -60,6 +60,38 @@ td.papers {
 <table width="90%" align="center" border="0" height="1">
   <!--DWLayoutTable-->
   <tbody>
+	<tr>
+		<td class="date"><font color="#083b89">HotOS-XVIII</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Reasoning about modern datacenter infrastructures using partial histories </strong> [<a href="pub/tbd.pdf" target="_blank">pdf</a> | <a href="pub/tbd.txt" target="_blank">bib</a>]
+						  <br>
+						      Xudong Sun, Lalith Suresh, Aishwarya Ganesan, Ramnatthan Alagappan, Michael Gasch, Lilia Tang, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 18th Workshop on Hot Topics in Operating Systems (<font color="#083b89"><b>HotOS-XVIII</b></font>), Virtual Event, May 2021.
+					  </span>
+				  </div>
+		  </td>
+	</tr>
+
+    <tr>
+		<td class="date"><font color="#083b89">HotOS-XVIII</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Fail-slow fault tolerance needs programming support </strong> [<a href="pub/tbd.pdf" target="_blank">pdf</a> | <a href="pub/tbd.txt" target="_blank">bib</a>]
+						  <br>
+						    Andrew Yoo, Yuanli Wang, Ritesh Sinha, Shuai Mu, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 18th Workshop on Hot Topics in Operating Systems (<font color="#083b89"><b>HotOS-XVIII</b></font>), Virtual Event, May 2021.
+					  </span>
+				  </div>
+		  </td>
+	</tr>
+
     <tr>
       <td class="date"><font color="#083b89">ICSE'21</font></td>
   		<td class="papers">
