--- a/pub.html
+++ b/pub.html
@@ -60,6 +60,22 @@ td.papers {
 <table width="90%" align="center" border="0" height="1">
   <!--DWLayoutTable-->
   <tbody>
+	  
+	<tr>
+		<td class="date"><font color="#083b89">ISSTA'21</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Test-Case Prioritization for Configuration Testing</strong> [<a href="pub/tbd.pdf" target="_blank">pdf</a> | <a href="pub/tbd.txt" target="_blank">bib</a>]
+						  <br>
+						      Runxiang Cheng, Lingming Zhang, Darko Marinov, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 30th ACM SIGSOFT International Symposium on Software Testing and Analysis (<font color="#083b89"><b>ISSTA'21</b></font>), Virtual Event, July 2021.
+					  </span>
+				  </div>
+		  </td>
+	</tr>
 	<tr>
 		<td class="date"><font color="#083b89">HotOS-XVIII</font></td>
 			<td class="papers">
@@ -75,8 +91,7 @@ td.papers {
 				  </div>
 		  </td>
 	</tr>
-
-    <tr>
+        <tr>
 		<td class="date"><font color="#083b89">HotOS-XVIII</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
